Upgrade Javassist and make bytecode enhancement work on JDK 8 and JDK 17.
Use one class-definition entry, fix overload and inheritance enhancement, and add rule, lifecycle, diagnostic, and generated-query support so the same Java 8 artifacts run on both JDKs.